test/libsolidity/syntaxTests/nameAndTypeResolution/416_interface_function_bodies.sol
interface I {
    function f() external pure {
    }
}
// ----
// TypeError: (18-52): Functions in interfaces cannot have an implementation.
